# tushare-integration

./: .gitignore  404.html  Dockerfile  LICENSE  README.md  build.sh  config.yaml  create_table.py  generate_models.py  generate_models_init.py  get_categories.py  index.html  jobs.yaml  main.py  migrate_metadata.py  migrate_start_date.py  mkdocs.yml  pyproject.toml  requirements.txt  schema_upgrade.py  scrapy.cfg
.github/workflows/: github-actions-build-docs.yml  github-actions-build-image.yml
deploy/tushare-integration/: Chart.yaml  values.yaml
deploy/tushare-integration/templates/: configmap.yaml  cronjob.yaml
develop/: index.html
docs/: develop.md  index.md  install.md  settings.md  troubleshooting.md  usage.md
install/: index.html
schema/future/quotes/: fut_weekly_detail.yaml  fut_wsr.yaml
schema/index/quotes/: index_global.yaml  index_monthly.yaml  index_weekly.yaml
schema/index/sw/: sw_daily.yaml
schema/index/ths/: ths_daily.yaml  ths_index.yaml
schema/index/zx/: ci_daily.yaml
schema/stock/basic/: hs_const.yaml  namechange.yaml  new_share.yaml  stk_rewards.yaml  stock_company.yaml  trade_cal.yaml
schema/stock/financial/: balancesheet.yaml  cashflow.yaml  express.yaml  fina_audit.yaml
schema/stock/limit/: hm_detail.yaml  kpl_concept_cons.yaml  kpl_list.yaml
schema/stock/margin/: margin_detail.yaml  slb_len_mm.yaml  slb_sec.yaml
schema/stock/market/: concept.yaml  margin.yaml  margin_detail.yaml  margin_target.yaml  share_float.yaml  top10_floatholders.yaml
schema/stock/moneyflow/: moneyflow_ths.yaml
schema/stock/quotes/: adj_factor.yaml  daily_basic.yaml  ggt_top10.yaml  hsgt_top10.yaml  stk_mins.yaml  weekly.yaml
schema/stock/special/: broker_recommend.yaml  ccass_hold.yaml  cyq_chips.yaml  hk_hold.yaml  limit_list_d.yaml  report_rc.yaml  stk_factor.yaml  stk_factor_pro.yaml  stk_surv.yaml  ths_hot.yaml
schema/template/clickhouse/: table.jinja2
schema/template/doris/: table.jinja2
schema/template/mysql/: table.jinja2
scripts/: batch_run.sh  generate_jobs.py  publish.py  publish.sh
search/: search_index.json
settings/: index.html
tests/: create_tables.py
troubleshooting/: index.html
tushare_integration/: __init__.py  commands.py  db_engine.py  dictionary.py  items.py  log_model.py  manager.py  middlewares.py  pipelines.py  reporters.py  settings.py
tushare_integration/commands/: __init__.py  api.py  config.py  run.py  spider.py
tushare_integration/models/: __init__.py  adj_factor.py  anns_d.py  bak_basic.py  bak_daily.py  balancesheet.py  base.py  bc_bestotcqt.py  bc_otcqt.py  bishijie.py  block_trade.py  bo_cinema.py  bo_daily.py  bo_monthly.py  bo_weekly.py  bond_blk.py  bond_blk_detail.py  broker_recommend.py  btc8.py  btc_marketcap.py  btc_pricevol.py  cashflow.py  cb_basic.py  cb_call.py  cb_daily.py  cb_issue.py  cb_price_chg.py  cb_rate.py  cb_share.py  ccass_hold.py  ccass_hold_detail.py  cctv_news.py  ci_daily.py  cn_cpi.py  cn_gdp.py  cn_m.py  cn_pmi.py  cn_ppi.py  coin_bar.py  coin_pair.py  (+174 more)
tushare_integration/models/base/: func.py
tushare_integration/models/base/functions/: to_date.py
tushare_integration/models/core/: __init__.py  base.py  func.py  types.py
tushare_integration/schema/: sql_template.py
tushare_integration/schema/future/basic/: fut_basic.yaml
tushare_integration/schema/future/quotes/: fut_daily.yaml  fut_holding.yaml  fut_mapping.yaml  fut_settle.yaml  fut_weekly_detail.yaml  fut_wsr.yaml
tushare_integration/schema/index/basic/: index_basic.yaml
tushare_integration/schema/index/quotes/: daily_info.yaml  index_daily.yaml  index_dailybasic.yaml  index_global.yaml  index_monthly.yaml  index_weekly.yaml  index_weight.yaml  sz_daily_info.yaml
tushare_integration/schema/index/sw/: index_classify.yaml  index_member.yaml  index_member_all.yaml
tushare_integration/schema/index/ths/: ths_daily.yaml  ths_index.yaml  ths_member.yaml
tushare_integration/schema/index/zx/: ci_daily.yaml
tushare_integration/spiders/: tushare.py
tushare_integration/spiders/future/: basic.py  quotes.py
tushare_integration/spiders/index/: basic.py  quotes.py  sw.py  ths.py  zx.py
tushare_integration/spiders/stock/: basic.py  daily.py  financial.py  index.py  limit.py  margin.py  market.py  moneyflow.py  quotes.py  special.py
usage/: index.html
(+135 files in other folders)
