[project]
name = "tushare-integration"
version = "0.1.0"
description = ""
authors = [{ "name" = "zhangbingchen", "email" = "1731259685@qq.com" }]
readme = "README.md"
dependencies = [
"clickhouse-connect==0.7.12",
"cryptography==42.0.8",
"jinja2==3.1.4",
"lz4==4.3.3",
"numpy==1.26.4",
"pandas==2.2.2",
"pydantic-settings==2.3.3",
"pydantic==2.7.4",
"python-dateutil==2.9.0",
"pyyaml==6.0.1",
"requests==2.32.3",
"rich==13.7.1",
"scrapy==2.11.2",
"setuptools==70.0.0",
"sqlalchemy==2.0.30",
"typer==0.12.3",
"typing-extensions==4.12.2",
"zstandard==0.22.0",
]


[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = ["ignore::pydantic.PydanticDeprecatedSince20"]

[tool.setuptools.packages.find]
include = ["tushare_integration"]
