[project]
name = "tushare-integration"
version = "0.1.7"
description = ""
authors = [{ "name" = "zhangbingchen", "email" = "1731259685@qq.com" }]
readme = "README.md"
dependencies = [
"clickhouse-connect==0.8.8",
"cryptography==44.0.0",
"jinja2==3.1.4",
"lz4==4.3.3",
"numpy==2.1.3",
"pandas==2.2.3",
"pyarrow==18.1.0",
"pydantic-settings==2.6.1",
"pydantic==2.10.2",
"pymysql==1.1.1",
"python-dateutil==2.9.0",
"pyyaml==6.0.2",
"requests==2.32.3",
"rich==13.9.4",
"scrapy==2.12.0",
"setuptools==75.6.0",
"sqlalchemy==2.0.36",
"typer==0.14.0",
"typing-extensions==4.12.2",
"zstandard==0.23.0",
]

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 120
profile = "black"

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
filterwarnings = ["ignore::pydantic.PydanticDeprecatedSince20"]

[tool.setuptools.packages.find]
include = ["tushare_integration"]
